--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>考试倒计时工具  --by 徐继龙</title>
+    <title>考试倒计时工具</title>
   </head>
   <body>
     <div id="app"></div>
